# aurora

./: .travis.yml  Cargo.toml  LICENSE  README.md
assets/: basic.lua  binding.lua  comments.lua  expressions.lua  fib.lua  for.lua  loops.lua  math.lua  max.lua  tables.lua  types.lua
assets/lib/: core.lua
examples/: console.rs  file.rs
src/: data.rs  error.rs  expr.rs  interpreter.rs  lib.rs  main.rs  parser.rs  scanner.rs
src/config/: mod.rs
src/interpreter/: function.rs  library.rs  mod.rs  table.rs
src/parser/: expr.rs  mod.rs  scanner.rs
src/test/: mod.rs
tests/: examples.rs  interpreter.rs  toml.rs
tests/toml/: comments.toml  fib.toml  math.toml  max.toml
