[package]
name = "aurora"
version = "0.1.0"
authors = ["DevOrc <ncharlton002@gmail.com>"]
repository = "https://github.com/DevOrc/aurora"
readme = "README.md"
license = "MIT"

[[bin]]
name = "bin"
path = "src/main.rs"

[dependencies]
clap = "2.32.0"


[dev-dependencies]
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"